[package]
name = "dbgengmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
windows = { version = "0.62.2", features = ["Win32_System_Diagnostics_Debug_Extensions"] }
windows-core = "0.62.2"
